unpackaged/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Input_Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Input_Currency_ISO_Code__c</fullName>
    <label>Input Currency ISO Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Currency_Codes</valueSetName>
    </valueSet>
</CustomField>