unpackaged/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Input_Goal_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Input_Goal_Amount__c</fullName>
    <label>Input Goal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>