unpackaged/main/default/objects/ucinn_ascendv2__Matching_Challenge__c/fields/ucinn_ascendv2__Operating_Entity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Entity</label>
    <referenceTo>ucinn_ascendv2__Operating_Entity__c</referenceTo>
    <relationshipLabel>Matching Challenges</relationshipLabel>
    <relationshipName>Matching_Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>